# notifications-old

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: test.yaml
apps/fcm_push_notifications_provider/: happ.yaml
crates/hc_zome_fcm_push_notifications_provider_types/: Cargo.toml
dnas/fcm_push_notifications_provider/workdir/: dna.yaml
dnas/fcm_push_notifications_provider/zomes/coordinator/fcm_push_notifications_provider/: Cargo.toml
dnas/fcm_push_notifications_provider/zomes/coordinator/fcm_push_notifications_provider/src/: fcm_tokens.rs  lib.rs  service_account_keys.rs
dnas/fcm_push_notifications_provider/zomes/coordinator/fcm_push_notifications_provider/tests/common/: mod.rs
dnas/fcm_push_notifications_provider/zomes/integrity/fcm_push_notifications_provider/: Cargo.toml
dnas/notifications_provider/workdir/: dna.yaml
dnas/notifications_provider/zomes/coordinator/notifications_provider/: Cargo.toml
dnas/notifications_provider/zomes/coordinator/notifications_provider/src/: lib.rs
docs/: design.md
notifications/crates/hc_zome_notifications_types/: Cargo.toml
notifications/crates/hc_zome_notifications_types/src/: lib.rs
notifications/crates/hc_zome_trait_pending_notifications/: Cargo.toml
notifications/crates/hc_zome_trait_pending_notifications/src/: lib.rs
notifications/workdir/: dna.yaml
notifications/zomes/coordinator/notifications/: Cargo.toml
notifications/zomes/coordinator/notifications/src/: lib.rs
notifications/zomes/integrity/notifications/: Cargo.toml
oldtests/tests/: complex_flow.rs
providers/fcm/apps/notifications_provider_fcm/workdir/: happ.yaml
providers/fcm/apps/notifications_provider_fcm_recipient/workdir/: dna.yaml  happ.yaml
providers/fcm/crates/notifications_provider_fcm_types/: Cargo.toml
providers/fcm/crates/notifications_provider_fcm_types/src/: lib.rs
providers/fcm/zomes/coordinator/notifications_provider_fcm/: Cargo.toml
providers/fcm/zomes/coordinator/notifications_provider_fcm/src/: fcm_tokens.rs  lib.rs  service_account_keys.rs
providers/fcm/zomes/coordinator/notifications_provider_fcm_bridge/: Cargo.toml
providers/fcm/zomes/coordinator/notifications_provider_fcm_bridge/src/: fcm_tokens.rs  lib.rs
providers/fcm/zomes/coordinator/notifications_provider_fcm_recipient/: Cargo.toml
providers/fcm/zomes/integrity/notifications_provider_fcm/: Cargo.toml
providers/fcm/zomes/integrity/notifications_provider_fcm/src/: lib.rs
services/email/: default.nix
services/email/crates/email_notifications_types/: Cargo.toml
services/email/crates/email_notifications_types/src/: lib.rs
services/email/provider/: app.nix
services/email/provider/app/: happ.yaml
services/email/provider/dnas/email_notifications_provider/: dna.nix
services/email/provider/dnas/email_notifications_provider/zomes/coordinator/email_notifications_provider/: Cargo.toml  zome.nix
services/email/provider/dnas/email_notifications_provider/zomes/coordinator/email_notifications_provider/src/: email_addresses.rs  email_credentials.rs  lib.rs
services/email/provider/dnas/email_notifications_provider/zomes/coordinator/email_notifications_provider/tests/common/: mod.rs
services/email/provider/dnas/email_notifications_provider/zomes/integrity/email_notifications_provider/: Cargo.toml  zome.nix
services/email/provider/dnas/email_notifications_provider/zomes/integrity/email_notifications_provider/src/: lib.rs
services/email/provider/dnas/email_notifications_service/zomes/coordinator/email_notifications_bridge/: Cargo.toml  zome.nix
services/email/provider/dnas/email_notifications_service/zomes/coordinator/email_notifications_bridge/src/: lib.rs
services/email/provider/runner/: Cargo.toml
services/email/provider/runner/src/: launch.rs  main.rs
services/email/service/dna/: dna.nix  dna.yaml
services/email/service/zomes/coordinator/email_notifications_service/: Cargo.toml  zome.nix
services/email/service/zomes/coordinator/email_notifications_service/src/: lib.rs
services/email/tests/: package.json  vitest.config.ts
services/email/tests/fixture/workdir/: dna.yaml  happ.yaml
services/email/tests/src/: email-service.test.ts
services/fcm/apps/fcm_notifications_recipient/app/: dna.yaml
services/fcm/crates/fcm_notifications_types/: Cargo.toml
services/fcm/crates/hc_zome_trait_pending_notifications/: Cargo.toml
services/fcm/provider/app/: happ.yaml
services/fcm/provider/dnas/fcm_notifications_provider/zomes/coordinator/fcm_notifications_provider/: Cargo.toml
services/fcm/provider/dnas/fcm_notifications_provider/zomes/coordinator/fcm_notifications_provider/src/: fcm_tokens.rs  lib.rs  service_account_keys.rs
services/fcm/provider/dnas/fcm_notifications_service/zomes/coordinator/fcm_notifications_bridge/: Cargo.toml
services/fcm/provider/dnas/fcm_notifications_service/zomes/coordinator/fcm_notifications_bridge/src/: lib.rs
services/fcm/service/dna/: dna.yaml
settings/stories/: 1-introduction.mdx  2.3-coordinator.mdx  3.2-notifications-provider-store.mdx
settings/ui/: package.json
settings/ui/demo/: index.html
settings/ui/src/: context.ts  index.ts  mocks.ts  notifications-provider-store.ts
settings/ui/src/elements/: notifications-provider-context.ts
settings/zomes/coordinator/notifications_settings/: Cargo.toml
settings/zomes/coordinator/notifications_settings/src/: lib.rs
settings/zomes/integrity/notifications_settings/: Cargo.toml
stories/: 2.1-backend-setup.mdx  2.2-integrity.mdx  3.1-frontend-setup.mdx
tests/: Cargo.toml  package.json
tests/fixture/workdir/: happ.yaml
tests/src/: complex-flow.test.ts  setup.ts
tests/tests/: complex_flow.rs
ui/demo/: index.html
ui/src/: notifications-provider-client.ts  types.ts
workdir/: dna.yaml  happ.yaml  web-happ.yaml
zomes/coordinator/notifications_provider/: Cargo.toml
zomes/coordinator/notifications_provider/src/: lib.rs
zomes/coordinator/notifications_provider/tests/common/: mod.rs
zomes/integrity/notifications_provider/: Cargo.toml
(+21 files in other folders)
