[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
  "services/*/crates/*",
  "services/*/service/zomes/coordinator/*",
  "services/*/service/zomes/integrity/*",
  "services/*/provider/dnas/*/zomes/coordinator/*",
  "services/*/provider/dnas/*/zomes/integrity/*",
]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.0-beta-dev.27"
hdk = "0.3.0-beta-dev.31"
holochain = "0.3.0-beta-dev.37"
serde = "1.0.193"

