[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
  "settings/zomes/integrity/*",
  "settings/zomes/coordinator/*",
  "services/*/crates/*",
  "services/*/service/zomes/coordinator/*",
  "services/*/service/zomes/integrity/*",
  "services/*/provider/dnas/*/zomes/coordinator/*",
  "services/*/provider/runner",
  "services/*/provider/dnas/*/zomes/integrity/*",
]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.0-beta-dev.27"
hdk = "0.3.0-beta-dev.31"
holochain = "0.3.0-beta-dev.37"
serde = "1.0.193"

[patch.crates-io]
hdi = { git = "https://github.com/holochain/holochain", branch = "develop" }
hdk = { git = "https://github.com/holochain/holochain", branch = "develop" }

holo_hash = { git = "https://github.com/holochain/holochain", branch = "develop" }
kitsune_p2p = { git = "https://github.com/holochain/holochain", branch = "develop" }
holochain_zome_types = { git = "https://github.com/holochain/holochain", branch = "develop" }
holochain_integrity_types = { git = "https://github.com/holochain/holochain", branch = "develop" }
