[package]
name = "tests"
version = "0.0.1"
edition = "2021"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }
hc_zome_notifications_provider_fcm_types = { path = "../providers/fcm/crates/notifications_provider_fcm_types" }

[dev-dependencies]
fixt = "*"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true, default-features = false, features = [
  "test_utils",
] }
tokio = { version = "1.3", features = ["full"] }
