[package]
name = "hc_zome_trait_pending_notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdk = { workspace = true }
serde = "1"

hc_zome_traits = { git = "https://github.com/holochain-open-dev/zome-traits", branch = "main" }
hrl = { git = "https://github.com/holochain-open-dev/common", branch = "main" }
