[package]
name = "hc_zome_notifications_provider_coordinator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_notifications_provider_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

notifications_provider_integrity = { path = "../../integrity/notifications_provider", package = "hc_zome_notifications_provider_integrity" }

[dev-dependencies]
fixt = "*"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }

