[package]
name = "hc_zome_notifications_settings_coordinator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_notifications_settings_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_notifications_settings_integrity = { path = "../../integrity/notifications_settings" }
# hc_zome_trait_pending_notifications = { workspace = true }
# hc_zome_traits = { workspace = true }
