[package]
name = "hc_zome_notifications_provider_fcm_coordinator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_notifications_provider_fcm_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_notifications_provider_fcm_types = { path = "../../../crates/notifications_provider_fcm_types" }
hc_zome_notifications_provider_fcm_integrity = { path = "../../integrity/notifications_provider_fcm" }
hc_zome_notifications_types = { workspace = true }

[dev-dependencies]
fixt = "*"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }
