[package]
name = "hc_zome_notifications_provider_fcm_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_notifications_provider_fcm_integrity"

[dependencies]
hdi = { workspace = true }

serde = { workspace = true }

hc_zome_notifications_provider_fcm_types = { path = "../../../crates/notifications_provider_fcm_types" }
