[package]
name = "hc_zome_email_notifications_service_coordinator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_email_notifications_service_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_email_notifications_service_integrity = { path = "../../integrity/email_notifications_service" }
hc_zome_email_notifications_types = { path = "../../../../crates/email_notifications_types" }
# hc_zome_trait_pending_notifications = { workspace = true }
# hc_zome_traits = { workspace = true }
