[package]
name = "email_notifications_provider_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "email_notifications_provider_integrity"

[dependencies]
hdi = { workspace = true }

serde = { workspace = true }

email_notifications_types = { path = "../../../../../../crates/email_notifications_types" }
