[package]
name = "hc_zome_email_notifications_bridge"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_email_notifications_bridge"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_email_notifications_types = { path = "../../../../../../crates/email_notifications_types" }

[dev-dependencies]
fixt = "*"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }
